--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>LearningJava</groupId>
     <artifactId>LearningJava</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
 
     
 </project>
