--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,36 @@
         </plugin>
     </plugins>
 
-    
+    <repositories>
+        <repository>
+            <id>snapshots</id>
+            <url>http://repo.maven.apache.org</url>
+        </repository>
+    </repositories>
+
+
+    <dependencies>
+
+        <!--<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+    </dependencies>
+
 </project>
