Rejected commit: Default

--- a/src/main/java/LearnJavaMail/mail.properties
+++ b/src/main/java/LearnJavaMail/mail.properties
@@ -2,3 +2,4 @@ mail.transport.protocol=smtps
 mail.smtps.auth=true
 mail.smtps.host=smtp.yandex.ru
 mail.smtps.user=shsanya
+mail.smtps.password=piramida
